# crewai-poem-bot

./: README.md
CREW AI/project2/: pyproject.toml
CREW AI/project2/src/project2/: hello.py
CREW AI/project3/: pyproject.toml
CREW AI/project3/project1/: pyproject.toml
CREW AI/project3/src/project3/: hello.py
Poem_generator_Agent/: README.md  pyproject.toml  twinpoem
Poem_generator_Agent/src/pr5/: main.py
