[project]
name = "project3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AhmedRaza", email = "sheikhahlhmed670@gmail.com.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.60.4",
]

[project.scripts]
project3 = "project3:main"
gemini="project3.hello:call_gemini"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
